# GeomLib

./: .gitignore  CMakeLists.txt  README.md
include/geom/: BBST.h  Lines.h  io.h  main.h  point.h
src/: Lines.cpp  main.cpp  point.cpp  sweep_line.cpp
src/dataStructures/: BBST.cpp
tests/: test_main.cpp
